# copter_sim

./: .gitmodules  CMakeLists.txt
icons/: icons.qrc
include/: controllernode.hpp  dronenode.hpp  droneupdatecallback.hpp  mainwindow.hpp  osgwidget.hpp
src/: controllernode.cpp  dronenode.cpp  droneupdatecallback.cpp  mainwindow.cpp  mainwindow.ui  osgwidget.cpp
